Working, but more fine tuning of prompt and UI needed